infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wrangler-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: wrangler.davidahmadov.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: text-wrangler-svc
                port:
                  number: 8080
